tests/fixtures/invalid/set_subscript.py
# Set does not support subscript operation
x: set[int] = {1, 2, 3}
y: int = x[0]
